--- a/mini-project/index.css
+++ b/mini-project/index.css
@@ -15,13 +15,42 @@
 h1{
     color: teal;
 }
-.item-list{
-    width: 400px;
-    margin: 15px;
+
+.list{
+    width: 250px;
+    padding: 5px;
+    border: 3px solid teal;
+    margin: 5px 0;
+    background: #f1e7ff;
+    display:none;
+    position: relative;
 }
-.item-list div{
-color: #FFFFFF;
-background: #996D6D;
-font-size: 25px;
-text-shadow: #474747 3px 5px 2px;
+.list h5{
+    font-size: 18px;
+    color: teal;
+    text-align: center;
+}
+.list div{
+    font-size: 20px;
+    color: teal;
+    text-align: center;
+    font-family: monospace;
+}
+.open{
+    display:block;
+}
+.close{
+    width: 20px;
+    height: 20px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 50%;
+    position: absolute;
+    top: -12px;
+    right: -12px;
+    border:1px solid teal
+}
+.close::before{
+    content: 'X';
+    display: block;
+    font-size: 17px;
 }
